# Slider-Game

./: README.md
src/: CMakeLists.txt  GameField.cpp  GameField.h  IDAS_Multithread.cpp  IDAS_Multithread.h  IDA_Star.cpp  IDA_Star.h  Node.h  SliderGUI.cpp  SliderGUI.h  main.cpp
